# rvos

./: .gitignore  CMakeLists.txt  crt0.S  kernel.elf  linker.ld  riscv.cmake
core/: init.kmd  init.s
elf/: README.md  elftokmd  elftokmd.py  elftokmd.sh  elftokmd_test.py  init.kmd  kernel.kmd
elf/example/: a.kmd  a.out  board.ld  build.sh  example.c  lib.c  lib.h
etok/: main.py  objdump.sh
etok/objdump_to_kmd/: __init__.py  translation.py
kernel/: README.md  pushing.md
kernel/riscv/: nvim  riscasm  riscdiss  riscvemu
kernel/src/: main.c  main.s
kernel/src/apps/: numberpunch.s  stopwatch.s
kernel/src/core/: init.s  trap.s  trap_new.s  zerobss.s
kernel/src/core/ecall/: do_syscall.c  ecall.s  ecall_new.c  ecalls.s  syscall.s
kernel/src/core/interrupt/: interrupt.s  interrupt_old.s  interrupts_old.s
kernel/src/drivers/: button.s  keypad.s  rwtimer.s
kernel/src/syscalls/: syscalls.c
kernel/src/utils/: conversions.s  delay.s  print.s  printbcd.s  puts.s
newlib/include/: newlib.h
syscalls/: sys_write.c
